Day05/vpc.tf
resource "aws_vpc" "mini_vpc" {
    cidr_block = "10.0.0.0/16"
    enable_dns_hostnames = true
    enable_dns_support = true

    tags = {
      Name = "mini-vpc"
    }
}



resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.mini_vpc.id
}
